--- a/templates/admin_manage_courses.html
+++ b/templates/admin_manage_courses.html
@@ -7,8 +7,7 @@
     <a href="{{ url_for('admin_add_course') }}">Thêm Môn học mới</a>
 
     ...
-    <table>
-        <thead>
+    <table class="data-table"> <thead>
             <tr>
                 <th>Mã Môn học</th>
                 <th>Tên Môn học</th>
